[gd_scene load_steps=4 format=2]

[ext_resource path="res://entity/npc/enemies/chaser/chaser.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 200.0

[node name="Chaser" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -10, -10, 10, -10, 10, 10, -10, 10, -10, -10 )

[node name="Polygon2D2" type="Polygon2D" parent="."]
rotation = -3.14159
color = Color( 0.482353, 0.482353, 0.482353, 1 )
polygon = PoolVector2Array( -9.60176, 10.3083, 0, 20, 10, 10, -10, 10 )

[node name="Timer" type="Timer" parent="."]

[node name="TargetArea" type="Area2D" parent="."]

[node name="Target" type="CollisionShape2D" parent="TargetArea"]
shape = SubResource( 2 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
